--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   -in credentials.tar.gz.enc -out credentials.tar.gz -d
 - if [ ! -d "${GAE_PYTHONPATH}" ]; then python scripts/fetch_gae_sdk.py $(dirname
   "${GAE_PYTHONPATH}"); fi
-- if [ ! -d ${HOME}/google-cloud-sdk/bin ]; then curl https://sdk.cloud.google.com | bash;
+- if [ ! -d ${HOME}/google-cloud-sdk/bin ]; then rm -rf ${HOME}/google-cloud-sdk && curl https://sdk.cloud.google.com | bash;
   fi
 - tar -xzf credentials.tar.gz
 - mkdir -p lib
